--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-number-format": "^5.3.4",
     "styled-components": "^6.1.8",
     "typescript-eslint": "^7.3.1"
   },
